...
            loadingMore = true;
            props.fetchVaultNotes(props.url, false, () => (loadingMore = false));
        }
    };

    return (
        <View style={{flex: 1}} testID="vault-notes-screen">
            <View style={s.topBar}>
                <View style={s.buttonsContainer}>
                    <ActionButton
                        onPress={() => props.navigation.navigate('CreateNote')}
                        text="New note"
                        icon={<Icon regular name="note-medical" size={15} />}
                        testID="new-note"
                    />
                </View>
            </View>
            {props.notes.length === 0 ? (
                <EmptyContent
                    graphic={<EntypoIcon color="lightgrey" name="text" size={80} style={{marginVertical: 20}} />}
...
