...
                    return {
                        headerTitle: () => <Title title={routeParams?.note ? 'Note' : 'New Note'} />,
                        headerLeft: () => <Back onPress={() => navigation.goBack()} />,
                        headerRight: () => (
                            <Next
                                text={!routeParams || !routeParams.editing ? 'Done' : 'Save'}
                                testID={!routeParams || !routeParams.editing ? 'done' : 'save'}
                                onPress={() => routeParams?.done()}
                                bold
                            />
                        ),
                        headerBackVisible: false,
                        headerTitleAlign: 'center',
...
