...
                            <Back
                                onPress={() => {
                                    route.params.cancel?.();
                                    navigation.goBack();
                                }}
                                icon={<XIcon name="x" color={colors.black} size={32} />}
                                testID="back"
                            />
                        );
                    },
                    headerRight: () =>
                        route.params.option < 4 || route.params.option === 7 ? (
                            <Next onPress={() => route.params.navigateState?.()} testID="next" />
                        ) : route.params.option === 5 || route.params.option === 6 ? (
                            <TouchableOpacity
                                style={s.sendContainer}
                                onPress={() => route.params.navigateState?.()}
                                testID="send">
                                <Icon name="ios-arrow-round-up" size={28} color="#fff" />
                            </TouchableOpacity>
                        ) : null,
                    headerTitle: () => (
                        <Text
                            style={{fontSize: 20, fontWeight: 'bold', color: colors.black}}
...
