...
                        onChangeText={this.onChangeText}
                        selectionColor="#6060FF"
                        autoFocus
                        value={this.state.username}
                        style={s.input}
                        maxLength={25}
                        testID="username-input"
                    />
                    {this.state.username !== '' ? (
                        this.props.searching ? (
                            <ActivityIndicator color="#6060FF" style={s.indicator} />
                        ) : this.props.validUsername.valid &&
                          this.props.validUsername.username === this.state.username.toLowerCase() ? (
...
                    )}
                <View style={{position: 'absolute', bottom: this.state.keyboardHeight + 16, left: 20}}>
                    <View style={s.dots}>
                        <View style={[s.dot, {backgroundColor: '#6060FF'}]} />
                        <View style={[s.dot, {backgroundColor: '#6060FF'}]} />
                    </View>
                    <Button onPress={this.register} text="Register" width={w('90%')} testID="continue" />
                </View>
            </View>
        );
    }
}

...
