...
                        name: 'SentRequests',
                        params: {count: total},
                        merge: true,
                    })
                }
                hitSlop={{top: 16, bottom: 16}}
                testID="requests-sent">
                <Text style={s.requests}>
                    {total} Request{total > 1 && 's'} sent
                </Text>
            </TouchableOpacity>
        );
    };
...
            );
        }
        // @ts-ignore
        const dataArray = requests.concat(groupRequests).concat(latestMessages);
        // if (dataArray.length > 0 || this.state.input.length > 0)
        return (
            <View style={{flex: 1}} testID="chats-screen">
                {this.actionButtons()}
                {this.header(this.props.latestMessages.length)}
                <FlatList
                    ref={this.list}
                    data={dataArray}
                    renderItem={this.renderItem}
...
