...
                group: this.props.group,
                user: this.props.user,
            });
            this.props.removeMemberRequest({
                group: this.props.group,
                userId: user.id,
                add: true,
                callback: () => this.props.navigation.goBack(),
            });
        } else {
            this.props.removeMemberRequest({
                group: this.props.group,
                userId: user.id,
...
