...
                props.navigation.reset({index: 0, routes: [{name: 'Authentication'}]});
            },
        });
    };

    const alert = () => {
        Alert.alert('Log Out', 'Are you sure you want to log out?', [
            {text: 'Cancel', style: 'cancel'},
            {
                text: 'Log Out',
                style: 'destructive',
                onPress: logout,
            },
...
            icon: <Icon name="list" />,
            type: 'link',
            separate: true,
        },
        {
            text: 'Log Out',
            testID: 'log-out',
            footer: true,
            action: alert,
            icon: <Icon name="power-off" color="grey" />,
            separate: true,
            type: 'menu',
        },
...
