...
                graphic: (
                    <LottieView source={emptyAnimation} autoPlay loop style={{width: w('80%'), marginBottom: 20}} />
                ),
                text: 'Looks like there are no files here yet. Start adding some to get going!',
                actionText: 'Upload files',
                actionIcon: 'upload',
                testID: 'upload-files',
                action: () => props.openModal({modalName: 'create'}),
            },
        },
        {
            type: 'Photos',
            titleIcon: 'images',
...
        },
    ];

    return (
        <ScrollView
            ref={listRef}
            testID="home-screen"
            refreshControl={
                <RefreshControl
                    refreshing={refreshing}
                    onRefresh={refresh}
                    tintColor={colors.primary}
                    colors={[colors.primary]}
...
