...
        },
        {
            text: 'Upload photos',
            action: uploadPhotos,
            icon: <Icon name="images" />,
            type: 'menu',
            testID: 'upload-photos',
        },
        {
            text: 'New note',
            action: () => {
                props.closeModal('create');
                navigation.navigate('CreateNote');
...
